Fix bug where selected times could be too close together
Rename "Graph" to "Chart"
Fix spacing of options
Combine volume and price graph into one

--- a/src/scss/scenes/home/scenes/crypto-deep-info/components/_graph.scss
+++ b/src/scss/scenes/home/scenes/crypto-deep-info/components/_graph.scss
@@ -1,4 +1,10 @@
 .currency-info-container.graph {
+  .controls {
+    display: flex;
+    justify-content: space-evenly;
+    padding-bottom: 1em;
+  }
+
   // REACT DATE PICKER
   .rdt {
     position: relative;
